

Updated Oldies
--------------

[Keyboard] The Keyboard now supports the whole US-ASCII character set. The four characters "{", "}", "|" and "~" were added, the first three replacing "[", "]", "\" in caps lock mode. The visual representant for the apostroph looks no longer like an acute accent.


Things Fixed
------------

[Makefile] Removed a repetition of -L$(PAPATH)/lib.


------------------------------
| PAlib 080823 : Tighten Up! |
------------------------------


New Stuff
---------

[Input] Added functions for using the Guitar Hero grip controller. See the example code in /examples/input/GHController for how to use them. These functions were contributed by BassAceGold.

[Input] Added functions for using the Taito Paddle controller. See the example code in /examples/input/TaitoPaddle for how to use these functions. Thanks to Yasu for figuring out how it works.

[FAT Loading] A whole new library for loading graphics and sound assets from FAT (EFS or regular FAT with DLDI) is introduced to PAlib thanks to NightFox! You can now easily load backgrounds, sprites with their palettes, textures, sound effects and other files from FAT. See the examples in /examples/FAT/FATLoading and the PAlib documentation (English only, sorry) for how to use these great new functions.

[8/16bit] A new "fake" 16-bit bitmap drawing mode by fincs. This simulates a 16-bit background using an 8-bit background by changing palettes every HBlank, and thereby frees up the large chunk of VRAM needed for a true 16-bit mode. See the included example in /examples/Bitmap8-16bit/Fake16bit or the PAlib documentation for usage.

[3DSprites] MaaS wrote a new function, PA_3DSetSpritePalCol, for changing 3D sprite palette colors on the fly.
